--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -31,6 +31,15 @@
         padding: 16px;
         width: 100%;
         max-width: 512px;
+        overflow-y: auto;
+
+        -ms-overflow-style: none;  /* Internet Explorer 10+ */
+        scrollbar-width: none;
+        padding-top: 8px;
+
+        &::-webkit-scrollbar { 
+            display: none;  /* Safari and Chrome */
+        }
     }
 }
 
